BuildingsPy Changelog
---------------------
- For unit tests, enabled option to run tests with OpenModelica.
  This change also allows specifying the test configuration in the more concise
  conf.yml rather than conf.json file.
  (https://github.com/lbl-srg/BuildingsPy/issues/453)
- For unit tests, added option to exclude files for dymola in library configuration script.
  Due to this change, the function regressiontest.setExcludeTest has been removed.
  (https://github.com/lbl-srg/BuildingsPy/pull/450)
- For unit tests, added optional colored output.
  (https://github.com/lbl-srg/BuildingsPy/pull/451)

Version 3.0.0, December 8, 2021 -- Release 3.0
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- For unit tests, changed code to generate names of Dymola output file to ensure that they are unique.
  Previously, an error was issued if they are not unique.
  (https://github.com/lbl-srg/BuildingsPy/issues/446)
- For merge script, renamed set_excluded_packages to set_excluded_directories
  (https://github.com/lbl-srg/BuildingsPy/issues/439)
- For Dymola simulations, corrected call to openModel in buildingspy/simulate/Dymola.py
- For unit tests, avoided copying .log and .mat files to temporary directory
  (https://github.com/lbl-srg/BuildingsPy/issues/428)
- For unit tests with Optimica, added check for access to component that are not present in constraining type of declaration
  (https://github.com/lbl-srg/BuildingsPy/issues/424)
- For library merger, corrected erroneous replacement of IBPSA in name of issue number
  (https://github.com/lbl-srg/BuildingsPy/issues/412)
- For unit tests, set Advanced.GenerateVariableDependencies = false as this can change the set of nonlinear equations
  (https://github.com/lbl-srg/BuildingsPy/issues/410)
- Added local relative tolerance along y axis by default
  (https://github.com/lbl-srg/BuildingsPy/pull/396)
- Fix rounding error issue on start and stop time values
  (https://github.com/lbl-srg/BuildingsPy/issues/363)