@@ -135,9 +135,6 @@ class Simulator(bs._BaseSimulator):
         s = """
 // File autogenerated by _get_dymola_commands
 // Do not edit.
-//cd("{working_directory}");
-openModel("{package_mo}", changeDirectory=false);
-Modelica.Utilities.Files.remove("{log_file}");
 OutputCPUtime:=true;
 """.format(working_directory=working_directory,
            package_mo=package_mo,
